fixed vertical alignment of task detail pane buttons

--- a/scss/modules/_task-details.scss
+++ b/scss/modules/_task-details.scss
@@ -247,3 +247,7 @@
   margin: 0 0 4px 0;
   padding: 4px 7px;
 }
+
+.task-details__btn--inline {
+  line-height: 0;
+}
